# google-photo-migration

./: .envrc  .gitignore  AGENTS.md  HANDOVER.md  PLAN.md  PLAN_DRIVE_TO_DRIVE.md  README.md  auth_helper.py  flake.nix  main.py  pyproject.toml  shell.nix
src/: auth.py  cli.py  processor.py  state_db.py
src/auth/: google_auth.py
src/core/: interfaces.py  rate_limiter.py
src/metadata/: fixer.py
src/sinks/: google_photos.py
src/sources/: google_drive.py
src/state/: sqlite_state.py
tests/: test_auth.py  test_basic.py  test_metadata.py  test_processor.py  test_rate_limiter.py
