[project]
name = "google-photo-migration"
version = "0.1.0"
description = "Migrate Google Photos from Takeout ZIPs in Google Drive"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "google-api-python-client>=2.124.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.31.0",
    "click>=8.1.7",
    "remotezip>=0.12.2",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
gphoto-migrate = "src.cli:main"

[dependency-groups]
dev = [
    "editables>=0.6",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
]

[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

