[project]
name = "google-photo-migration"
version = "0.1.0"
description = "Migrate Google Photos from Takeout ZIPs in Google Drive"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
dependencies = [
    "google-api-python-client>=2.124.0",
    "google-auth-oauthlib>=1.2.0",
    "requests>=2.31.0",
    "click>=8.1.7",
    "remotezip>=0.12.2",
    "platformdirs>=4.9.6",
    "pyexiftool>=0.5.6",
]
readme = "README.md"
requires-python = ">=3.11"

[project.scripts]
gphoto-migrate = "src.cli:main"

[dependency-groups]
dev = [
    "editables>=0.6",
    "pytest>=8.1.1",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
    "pyright>=1.1.360",
    "types-requests>=2.31.0",
    "google-api-python-client-stubs>=1.25.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "PT",  # flake8-pytest-style
]
ignore = ["PT019"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
check_untyped_defs = true

[tool.pyright]
include = ["src"]
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownMemberType = false
reportUnknownArgumentType = false
reportUnknownVariableType = false
pythonVersion = "3.11"


[build-system]
requires = ["hatchling", "editables"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

